--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="bmi.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
     <div class="container">
@@ -22,6 +22,6 @@
     <footer>
         www 🎲 App Brewery 🎲 com
       </footer>
-    <script src="bmi.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
